--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <!-- Bottom Navigation View -->
     <string name="home">Home</string>
     <string name="search">Search</string>
-    <string name="gallery">Gallery</string>
-    <string name="favorite">Favorite</string>
+    <string name="gallery">Upload</string>
+    <string name="favorite">Favorites</string>
     <string name="account">Account</string>
 
     <!-- Account -->
